Updated for Java 21